Fixed Dark mode bugs

--- a/index.css
+++ b/index.css
@@ -579,6 +579,10 @@ input:active, input:focus, textarea:active, textarea:focus {
     color: #dadada;
   }
 
+  .header-content .header__button .__button a i {
+    color: #e2e2e2;
+  }
+
   .skills__description .article {
     background-color: #343434;
     color: #fff;
